css/nyancat.css
@font-face {
  font-family: "Orbitron";
  font-style: normal;
  font-weight: 400;
  src: url("font/Blok.ttf");
}

body {
  background: url(https://media.giphy.com/media/2fC74jNn5SPvO/giphy.gif) no-repeat center center fixed;
  background-size: cover;
  position: relative;
}

body, html {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  padding: 0;
  margin: 0;
  --nyan-scale: 2;
}

@-webkit-keyframes color_change {
  from { color: white; }
  to { color: red; }
}

@-o-keyframes color_change {
  from { color: white; }
  to { color: red; }
}

@keyframes color_change {
  from { color: white; }
  to { color: red; }
}

p{
  -webkit-animation: color_change 1s infinite alternate;
  -moz-animation: color_change 1s infinite alternate;
  -ms-animation: color_change 1s infinite alternate;
  -o-animation: color_change 1s infinite alternate;
  animation: color_change 1s infinite alternate;
}

audio {
  display: none;
}

.nyan {
  z-index: 10;
  position: absolute;
  width: calc(34px * var(--nyan-scale));
  height: calc(33px * var(--nyan-scale));
  background-size: cover;
  image-rendering: pixelated;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  margin-top: 1em;
  margin-left: 0.8em;
  margin-left: 0.8em;
  height: calc(100vh - 1em);
  width: calc(100vw - 1.6em); /* no idea why box-sizing doesn't work here */
  position: relative;
  box-sizing: border-box;
}

main > p {
  z-index: 20;
  margin-top: .5em;
  margin-bottom: .5em;
  text-align: center;
  flex-grow: 0;
  font-family: "Orbitron", Comic Sans MS, sans-serif;
  font-weight: bold;
  font-size: 16pt;
}

#gif {
  z-index: 20;
  margin-bottom: 1.5em;
  max-width: 100vw;
  object-fit: cover;
  flex-grow: 0;
}

main > .spacer {
  flex-grow: 1;
}

#meme-mobile {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

#meme-mobile #meme {
  height: 50vh;
  flex-grow: 0;
  z-index: -5;
}

#meme-desktop #meme {
  position: absolute;
  margin-left: calc(34px * var(--nyan-scale) + 20px);
  height: 50vh;
  min-height: 200px;
  box-shadow: 2px 2px 12px -2px rgba(0, 0, 0, 0.4);
}

.rainbow {
  position: absolute;
  width: calc(9px * var(--nyan-scale));
  height: calc(18px * var(--nyan-scale));
  margin-top: calc(6px * var(--nyan-scale));
  z-index: 5;
  background-size: cover;
  image-rendering: pixelated;
}

.star {
  width: calc(7px * var(--nyan-scale));
  height: calc(7px * var(--nyan-scale));
  position: absolute;
  z-index: 1;
  background-size: cover;
  image-rendering: pixelated;
  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.2));
}

.nyan {
  background-image: url("../pics/nyancat.png");
}

.rainbow {
  background-image: url("../pics/rainbow.png");
}

.star {
  background-image: url("../pics/star.gif");
}

@media (min-width: 990px) {
  main {
    margin-right: 40vw;
    width: calc(60vw - 1.6em);
    margin-left: 2em;
  }

  .star, main > p {
    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.2));
  }
}

